feat: add burger-menu

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media.css">
+    <script defer src="./js/swiper-bundle.min.js"></script>
+    <script defer src="./js/main.js"></script>
   </head>
 
   <body>
     <h1 class="visually-hidden">Евклид проектные системы</h1>
-
+    <div class="overlay"></div>
+    
     <header class="header">
       <div class="container header__container">
         <button class="burger" aria-label="Открыть меню">
@@ -78,6 +81,15 @@
     <main>
       <section class="hero">
         <div class="container">
+
+          <!-- <div class="swiper-container hero__slider">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide" style="background-image: url('img/bg-1.jpg')"></div>
+              <div class="swiper-slide" style="background-image: url('img/bg-2.jpg')"></div>
+              <div class="swiper-slide" style="background-image: url('img/bg-3.jpg')"></div>
+            </div>
+          </div> -->
+
           <div class="hero__container">
             <h2 class="hero__title">Проектные решения любой сложности</h2>
             <p class="hero__text">
