--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
       <section class="consult" id="consult-section">
         <div class="container">
           <h2 class="section-title consult__title">Как мы работаем</h2>
-          <ul class="site-list consult__list">
-            <li class="consult__list-item">
-              <button class="consult__list-item-btn btn">1 шаг</button>
+          <ul class="site-list consult__list tabs">
+            <li class="consult__list-item tabs__item">
+              <button class="consult__list-item-btn btn tabs__btn tabs__btn--active" data-path="step-1">1 шаг</button>
             </li>
-            <li class="consult__list-item">
-              <button class="consult__list-item-btn btn">2 шаг</button>
+            <li class="consult__list-item tabs__item">
+              <button class="consult__list-item-btn btn tabs__btn" data-path="step-2">2 шаг</button>
             </li>
-            <li class="consult__list-item">
-              <button class="consult__list-item-btn btn">3 шаг</button>
+            <li class="consult__list-item tabs__item">
+              <button class="consult__list-item-btn btn tabs__btn" data-path="step-3">3 шаг</button>
             </li>
-            <li class="consult__list-item">
-              <button class="consult__list-item-btn btn">4 шаг</button>
+            <li class="consult__list-item tabs__item">
+              <button class="consult__list-item-btn btn tabs__btn" data-path="step-4">4 шаг</button>
             </li>
           </ul>
 
-          <div class="block">
+          <div class="block tab-content tab-content--active" data-target="step-1">
             <div class="block__wrapper">
               <h3 class="block__text-title">Проводим консультацию</h3>
               <p class="block__text">
@@ -211,6 +211,87 @@
               </div>
             </picture>
           </div>
+
+          <div class="block tab-content" data-target="step-2">
+            <div class="block__wrapper">
+              <h3 class="block__text-title">Составляем смету</h3>
+              <p class="block__text">
+                Внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов,
+                некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями.
+                А также представители современных социальных резервов, инициированные исключительно синтетически,
+                ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные
+                с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований.
+              </p>
+
+              <a class="site-link block__link block__link-info" href="#">Подробнее</a>
+              <a class="site-link block__link block__link-contract" href="#" download="./assets/docs/Договор.doc">Договор</a>
+            </div>
+
+            <picture class="block__picture">
+              <div>
+                <img
+                class="block__img step-2"
+                src="./assets/img/tab-step-2.jpg"
+                alt="Консультация"
+                />
+              </div>
+            </picture>
+          </div>
+
+          <div class="block tab-content" data-target="step-3">
+            <div class="block__wrapper">
+              <h3 class="block__text-title">Привлекаем подрядчиков</h3>
+              <p class="block__text">
+                Идейные соображения высшего порядка, а также новая модель организационной деятельности требует анализа
+                прогресса профессионального сообщества. Высокий уровень вовлечения представителей целевой аудитории
+                является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит
+                от дальнейших направлений развития. Разнообразный и богатый опыт говорит нам, что новая модель организационной
+                деятельности говорит о возможностях системы массового участия. Принимая во внимание показатели успешности,
+                постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнить важные задания
+                по разработке прогресса профессионального сообщества.
+              </p>
+
+              <a class="site-link block__link block__link-info" href="#">Подробнее</a>
+              <a class="site-link block__link block__link-contract" href="#" download="./assets/docs/Договор.doc">Договор</a>
+            </div>
+
+            <picture class="block__picture">
+              <div>
+                <img
+                class="block__img step-3"
+                src="./assets/img/tab-step-3.jpg"
+                alt="Консультация"
+                />
+              </div>
+            </picture>
+          </div>
+
+          <div class="block tab-content" data-target="step-4">
+            <div class="block__wrapper">
+              <h3 class="block__text-title">Инспектируем все этапы работ</h3>
+              <p class="block__text">
+                Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта:
+                высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития.
+                Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о
+                возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное
+                информационно-пропагандистское обеспечение нашей деятельности позволяет.
+              </p>
+
+              <a class="site-link block__link block__link-info" href="#">Подробнее</a>
+              <a class="site-link block__link block__link-contract" href="#" download="./assets/docs/Договор.doc">Договор</a>
+            </div>
+
+            <picture class="block__picture">
+              <div>
+                <img
+                class="block__img step-4"
+                src="./assets/img/tab-step-4.jpg"
+                alt="Консультация"
+                />
+              </div>
+            </picture>
+          </div>
+
         </div>
       </section>
 
