--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <script defer src="./js/jquery-3.6.0.min.js"></script>
+    <script defer src="./js/jquery-ui.min.js"></script>
     <script defer src="./js/swiper-bundle.min.js"></script>
     <script defer src="./js/main.js"></script>
   </head>
@@ -51,31 +52,41 @@
             </li>
           </ul>
         </nav>
-        <button class="btn nav__search-btn" type="button">
-          <svg
-            width="26"
-            height="26"
-            viewbox="0 0 26 26"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <rect
-              x="19.5138"
-              y="18.5495"
-              width="8"
-              height="2"
-              transform="rotate(45 19.5138 18.5495)"
-              fill="#333333"
-            />
-            <circle
-              cx="11.5"
-              cy="11.5"
-              r="10.5"
-              stroke="#333333"
-              stroke-width="2"
-            />
-          </svg>
-        </button>
+        <div class="search">
+          <input class="search__input" type="text" placeholder="Что будем искать?">
+          <button class="btn search__btn search__open" type="button">
+            <svg
+              width="26"
+              height="26"
+              viewbox="0 0 26 26"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect
+                x="19.5138"
+                y="18.5495"
+                width="8"
+                height="2"
+                transform="rotate(45 19.5138 18.5495)"
+                fill="#333333"
+              />
+              <circle
+                cx="11.5"
+                cy="11.5"
+                r="10.5"
+                stroke="#333333"
+                stroke-width="2"
+              />
+            </svg>
+          </button>
+          <button class="btn search__btn search__close visually-hidden" type="button">
+            <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect x="8.95386" y="7.30435" width="11.6645" height="2.33291" transform="rotate(45 8.95386 7.30435)" fill="#999999"/>
+              <rect x="7.30432" y="15.5524" width="11.6645" height="2.33291" transform="rotate(-45 7.30432 15.5524)" fill="#999999"/>
+              <circle cx="12" cy="12" r="11" stroke="#999999" stroke-width="2"/>
+              </svg>
+          </button>
+        </div>
       </div>
     </header>
 
@@ -309,6 +320,7 @@
                 </svg>
               </span>
             </li>
+
             <li class="faq__list-item">
               <h3 class="faq__list-item-text">
                 У меня есть свой проект. Сможем ли мы его доработать /
