--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
-    <script defer src="./js/jquery-3.6.0.min.js"></script>
-    <script defer src="./js/jquery-ui.min.js"></script>
     <script defer src="./js/swiper-bundle.min.js"></script>
     <script defer src="./js/main.js"></script>
   </head>
@@ -79,7 +77,7 @@
               />
             </svg>
           </button>
-          <button class="btn search__btn search__close visually-hidden" type="button">
+          <button class="btn search__btn search__reset visually-hidden" type="button">
             <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="8.95386" y="7.30435" width="11.6645" height="2.33291" transform="rotate(45 8.95386 7.30435)" fill="#999999"/>
               <rect x="7.30432" y="15.5524" width="11.6645" height="2.33291" transform="rotate(-45 7.30432 15.5524)" fill="#999999"/>
@@ -309,59 +307,91 @@
       <section class="faq">
         <div class="container">
           <h2 class="section-title faq__title">Часто задаваемые вопросы</h2>
-          <ul class="site-list faq__list" id="accordion">
-            <li class="faq__list-item">
-              <h3 class="faq__list-item-text">
-                Из чего формируется конечная стоимость проекта?
-              </h3>
-              <span class="faq__list-item-btn">
-                <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
-                </svg>
-              </span>
-            </li>
+          <ul class="site-list faq__list">
+            <li class="faq__list-item accordion">
+              <button class="accordion__control">
+                <h3 class="faq__list-item-text accordion__title">
+                  Из чего формируется конечная стоимость проекта?
+                </h3>
+                <span class="faq__list-item-btn accordion__btn">
+                  <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
+                  </svg>
+                </span>
+              </button>
 
-            <li class="faq__list-item">
-              <h3 class="faq__list-item-text">
-                У меня есть свой проект. Сможем ли мы его доработать /
-                реализовать?
-              </h3>
-              <span class="faq__list-item-btn">
-                <svg class="faq__list-item-svg"  width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
-                </svg>
-              </span>
+              <div class="accordion__content">
+                <p>Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть своевременно верифицированы. Но&nbsp;высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А&nbsp;ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. И&nbsp;нет сомнений, что явные признаки победы институционализации призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+                <p>Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к&nbsp;ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а&nbsp;значит, должны быть объединены в&nbsp;целые кластеры себе подобных. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также многие известные личности призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть представлены в&nbsp;исключительно положительном свете.</p>
+              </div>
             </li>
-            <li class="faq__list-item">
-              <h3 class="faq__list-item-text">
-                Я выбираю между разными компаниями. В чём ваше отличие?
-              </h3>
-              <span class="faq__list-item-btn">
-                <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
-                </svg>
-              </span>
+            <li class="faq__list-item accordion">
+              <button class="accordion__control">
+                <h3 class="faq__list-item-text accordion__title">
+                  У меня есть свой проект. Сможем ли мы его доработать / реализовать?
+                </h3>
+                <span class="faq__list-item-btn accordion__btn">
+                  <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
+                  </svg>
+                </span>
+              </button>
+
+              <div class="accordion__content">
+                <p>Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть своевременно верифицированы. Но&nbsp;высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А&nbsp;ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. И&nbsp;нет сомнений, что явные признаки победы институционализации призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+                <p>Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к&nbsp;ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а&nbsp;значит, должны быть объединены в&nbsp;целые кластеры себе подобных. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также многие известные личности призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть представлены в&nbsp;исключительно положительном свете.</p>
+              </div>
             </li>
-            <li class="faq__list-item">
-              <h3 class="faq__list-item-text">
-                Могу ли я делегировать вам работу / согласование с подрядчиком /
-                организацией?
-              </h3>
-              <span class="faq__list-item-btn">
-                <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
-                </svg>
-              </span>
+            <li class="faq__list-item accordion">
+              <button class="accordion__control">
+                <h3 class="faq__list-item-text accordion__title">
+                  Я выбираю между разными компаниями. В чём ваше отличие?
+                </h3>
+                <span class="faq__list-item-btn accordion__btn">
+                  <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
+                  </svg>
+                </span>
+              </button>
+
+              <div class="accordion__content">
+                <p>Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть своевременно верифицированы. Но&nbsp;высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А&nbsp;ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. И&nbsp;нет сомнений, что явные признаки победы институционализации призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+                <p>Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к&nbsp;ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а&nbsp;значит, должны быть объединены в&nbsp;целые кластеры себе подобных. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также многие известные личности призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть представлены в&nbsp;исключительно положительном свете.</p>
+              </div>
             </li>
-            <li class="faq__list-item">
-              <h3 class="faq__list-item-text">
-                Могу ли я вернуть деньги на каком-либо из этапов работ?
-              </h3>
-              <span class="faq__list-item-btn">
-                <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
-                </svg>
-              </span>
+            <li class="faq__list-item accordion">
+              <button class="accordion__control">
+                <h3 class="faq__list-item-text accordion__title">
+                  Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?
+                </h3>
+                <span class="faq__list-item-btn accordion__btn">
+                  <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
+                  </svg>
+                </span>
+              </button>
+
+              <div class="accordion__content">
+                <p>Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть своевременно верифицированы. Но&nbsp;высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А&nbsp;ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. И&nbsp;нет сомнений, что явные признаки победы институционализации призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+                <p>Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к&nbsp;ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а&nbsp;значит, должны быть объединены в&nbsp;целые кластеры себе подобных. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также многие известные личности призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть представлены в&nbsp;исключительно положительном свете.</p>
+              </div>
+            </li>
+            <li class="faq__list-item accordion">
+              <button class="accordion__control">
+                <h3 class="faq__list-item-text accordion__title">
+                  Могу ли я вернуть деньги на каком-либо из этапов работ?
+                </h3>
+                <span class="faq__list-item-btn accordion__btn">
+                  <svg class="faq__list-item-svg" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1556 15.0571L15.1556 -3.42467e-06L16.0378 -3.42467e-06L16.0378 15.0571L23.9471 15.0571L31.0355 15.0571L31.0355 15.9429L16.0378 15.9429L16.0378 31L15.1556 31L15.1556 15.9429L0.15791 15.9429L0.15791 15.0571L15.1556 15.0571Z" fill="#666666"/>
+                  </svg>
+                </span>
+              </button>
+
+              <div class="accordion__content">
+                <p>Являясь всего лишь частью общей картины, непосредственные участники технического прогресса призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть своевременно верифицированы. Но&nbsp;высококачественный прототип будущего проекта является качественно новой ступенью первоочередных требований. А&nbsp;ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими общечеловеческие нормы этики и&nbsp;морали. И&nbsp;нет сомнений, что явные признаки победы институционализации призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть указаны как претенденты на&nbsp;роль ключевых факторов.</p>
+                <p>Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к&nbsp;ответу. Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а&nbsp;значит, должны быть объединены в&nbsp;целые кластеры себе подобных. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также многие известные личности призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны быть представлены в&nbsp;исключительно положительном свете.</p>
+              </div>
             </li>
           </ul>
         </div>
