fix: delete tabindex from headings and paragraphs

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </nav>
         <div class="search">
           <input class="search__input" type="text" placeholder="Что будем искать?" tabindex="-1" aria-hidden="true">
-          <button class="btn search__btn search__open" type="button" aria-label="Поиск">
+          <button class="btn search__btn search__open" type="button" aria-label="Открыть Поиск">
             <svg
               width="26"
               height="26"
@@ -103,8 +103,8 @@
                   <div class="swiper-pagination"></div>
                 </div>
                 <div class="text-box">
-                  <h2 class="hero__title section-title" tabindex="0">Проектные решения любой сложности</h2>
-                  <p class="hero__text" tabindex="0">
+                  <h2 class="hero__title section-title">Проектные решения любой сложности</h2>
+                  <p class="hero__text">
                     Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день
                     остаются уделом проектантов
                   </p>
@@ -118,8 +118,8 @@
 
       <section class="about-us" id="about-us-section">
         <div class="container">
-          <h2 class="section-title about-us__title" tabindex="0">О нас</h2>
-          <p class="about-us__text" tabindex="0" aria-label="Текст о Нас">
+          <h2 class="section-title about-us__title">О нас</h2>
+          <p class="about-us__text" aria-label="Текст о Нас">
             Также как перспективное планирование создаёт необходимость включения в
             производственный план целого ряда внеочередных мероприятий с учётом комплекса
             экспериментов, поражающих по своей масштабности и грандиозности. А также диаграммы
@@ -136,7 +136,7 @@
             <img class="about-us__img" src="./assets/img/About-us-320.jpg" alt="Процесс монтажа">
             <div class="about-us__block">
               <div class="description">
-                <p class="description__text" tabindex="0">
+                <p class="description__text">
                   Принимая во внимание показатели успешности, перспективное
                   планирование способствует подготовке и реализации новых
                   принципов.
@@ -147,7 +147,7 @@
 
             <ul class="site-list about-us__list">
               <li class="about-us__list-item about-us-top">
-                <p class="about-us__list-item-text" tabindex="0">
+                <p class="about-us__list-item-text">
                   <span>Консультация с широким активом</span><br>
                   А также свежий взгляд на привычные вещи - безусловно открывает
                   новые горизонты для как самодостаточных, так и внешне
@@ -155,7 +155,7 @@
                 </p>
               </li>
               <li class="about-us__list-item about-us-bottom">
-                <p class="about-us__list-item-text" tabindex="0">
+                <p class="about-us__list-item-text">
                   <span>В своём стремлении повысить</span><br>
                   Качество жизни, они забывают, что сплочённость команды
                   профессионалов представляет собой интересный эксперимент
@@ -169,10 +169,10 @@
 
       <section class="consult" id="consult-section">
         <div class="container">
-          <h2 class="section-title consult__title" tabindex="0">Как мы работаем</h2>
+          <h2 class="section-title consult__title">Как мы работаем</h2>
           <ul class="site-list consult__list tabs">
             <li class="consult__list-item tabs__item">
-              <button class="consult__list-item-btn btn tabs__btn tabs__btn--active" data-path="step-1" aria-label="первый шаг" tabindex="0">1 шаг</button>
+              <button class="consult__list-item-btn btn tabs__btn tabs__btn--active" data-path="step-1" aria-label="первый шаг">1 шаг</button>
             </li>
             <li class="consult__list-item tabs__item">
               <button class="consult__list-item-btn btn tabs__btn" data-path="step-2" aria-label="второй шаг">2 шаг</button>
@@ -187,8 +187,8 @@
 
           <div class="block tab-content tab-content--active" data-target="step-1">
             <div class="block__wrapper">
-              <h3 class="block__text-title" tabindex="0">Проводим консультацию</h3>
-              <p class="block__text" tabindex="0">
+              <h3 class="block__text-title">Проводим консультацию</h3>
+              <p class="block__text">
                 Влечет за собой процесс внедрения и модернизации приоритизации
                 разума над эмоциями. В рамках спецификации современных
                 стандартов, некоторые особенности внутренней политики будут
@@ -215,7 +215,7 @@
                 <img
                 class="block__img"
                 src="./assets/img/How-it-works.jpg"
-                alt="Консультация"
+                alt="Проводим консультацию"
                 />
               </div>
             </picture>
@@ -223,8 +223,8 @@
 
           <div class="block tab-content" data-target="step-2">
             <div class="block__wrapper">
-              <h3 class="block__text-title" tabindex="0">Составляем смету</h3>
-              <p class="block__text" tabindex="0">
+              <h3 class="block__text-title">Составляем смету</h3>
+              <p class="block__text">
                 Внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов,
                 некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями.
                 А также представители современных социальных резервов, инициированные исключительно синтетически,
@@ -241,7 +241,7 @@
                 <img
                 class="block__img step-2"
                 src="./assets/img/tab-step-2.jpg"
-                alt="Консультация"
+                alt="Составляем смету"
                 />
               </div>
             </picture>
@@ -249,8 +249,8 @@
 
           <div class="block tab-content" data-target="step-3">
             <div class="block__wrapper">
-              <h3 class="block__text-title" tabindex="0">Привлекаем подрядчиков</h3>
-              <p class="block__text" tabindex="0">
+              <h3 class="block__text-title">Привлекаем подрядчиков</h3>
+              <p class="block__text">
                 Идейные соображения высшего порядка, а также новая модель организационной деятельности требует анализа
                 прогресса профессионального сообщества. Высокий уровень вовлечения представителей целевой аудитории
                 является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит
@@ -269,7 +269,7 @@
                 <img
                 class="block__img step-3"
                 src="./assets/img/tab-step-3.jpg"
-                alt="Консультация"
+                alt="Привлекаем подрядчиков"
                 />
               </div>
             </picture>
@@ -277,8 +277,8 @@
 
           <div class="block tab-content" data-target="step-4">
             <div class="block__wrapper">
-              <h3 class="block__text-title" tabindex="0">Инспектируем все этапы работ</h3>
-              <p class="block__text" tabindex="0">
+              <h3 class="block__text-title">Инспектируем все этапы работ</h3>
+              <p class="block__text">
                 Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта:
                 высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития.
                 Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о
@@ -295,7 +295,7 @@
                 <img
                 class="block__img step-4"
                 src="./assets/img/tab-step-4.jpg"
-                alt="Консультация"
+                alt="Инспектируем все этапы работ"
                 />
               </div>
             </picture>
@@ -306,7 +306,7 @@
 
       <section class="faq">
         <div class="container">
-          <h2 class="section-title faq__title" tabindex="0">Часто задаваемые вопросы</h2>
+          <h2 class="section-title faq__title">Часто задаваемые вопросы</h2>
           <ul class="site-list faq__list">
             <li class="faq__list-item accordion">
               <button class="accordion__control" aria-expanded="false">
@@ -474,7 +474,7 @@
         </div>
 
         <section class="text-us-section">
-          <h2 class="section-title text-us-section__title" tabindex="0">Оставить заявку</h2>
+          <h2 class="section-title text-us-section__title">Оставить заявку</h2>
           <form
             class="form"
             action="https://jsonplaceholder.typicode.com/posts"
@@ -529,7 +529,7 @@
           <hr>
         </section>
         <div class="footer__right">
-          <p class="footer__right-text" tabindex="0">
+          <p class="footer__right-text">
             Высокий уровень вовлечения представителей целевой аудитории является
             четким доказательством простого факта: разбавленное изрядной долей
             эмпатии, рациональное мышление позволяет оценить значение модели
